src/test/ui/consts/const-eval/union_promotion.nll.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/union_promotion.rs:19:29
   |
LL |       let x: &'static bool = &unsafe { //~ borrowed value does not live long enough
   |  _____________________________^
LL | |         Foo { a: &1 }.b == Foo { a: &2 }.b
LL | |     };
   | |_____^ creates a temporary which is freed while still in use
LL |   }
   |   - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
